<resources>
    <string name="app_name">Swingolf</string>
    <string name="add_user">Player</string>
    <string name="create_game">Game</string>
    <string name="show_all_games">All Games</string>
    <string name="back_btn">Back</string>
    <!-- Create Player -->
    <string name="create_player_headline">Create a new Player</string>
    <string name="player_name_edit_text">Player name</string>
    <string name="create_player">Save</string>
    <string name="player_name_error">The name should not be empty!</string>
    <string name="player_name_success">Successfully saved the Player</string>
    <!-- Create Game -->
    <string name="start_game">Start</string>
    <string name="game_name_edit_text">Game name</string>
    <string name="holes_edit_text">Hole count</string>
    <string name="missing_game_name">The game name should not be empty!</string>
    <string name="missing_hole_count">The hole count should not be empty!</string>
    <string name="hole_count_span_error">The hole count should be between 1 and 18!</string>
    <string name="missing_player_selection">You must choose at least one player form the list!</string>
    <!-- Create Tables -->
    <string name="course">Course</string>
    <string name="total">Total</string>
    <string name="save_game">Save Game</string>
    <string name="empty_fields">All fields must contain numbers between 1 and 99.</string>
    <!-- Game Save Dialog -->
    <string name="winner">The winner is</string>
    <string name="draw">Draw</string>
    <string name="stats">Player Stats:</string>
    <string name="leave">Leave</string>
    <string name="save_success">Successfully saved the game!</string>
    <!-- Game History -->
    <string name="history_title">Your saved games</string>
    <!-- SharedPreferences -->
    <string name="preferences">preferences</string>
    <string name="player_count">player_count</string>
    <string name="player_name">player_</string>
    <string name="game_count">game_count</string>
    <string name="game_name">game_</string>
</resources>